# rust_regularly

./: .gitignore  Cargo.toml  README.md  addScript.js
algebraic_list/: Cargo.toml
algebraic_list/src/: main.rs
app/: Cargo.toml
app/.cargo/: config
barcode/: Cargo.toml
barcode/src/: main.rs
blue/: Cargo.toml
blue/src/: main.rs
bt/: Cargo.toml
bt/src/: main.rs
challenge/: Cargo.toml
challenge/src/: main.rs
code_wars/: Cargo.toml
code_wars/src/: main.rs
codewars_two/: Cargo.toml
comp_str/: Cargo.toml
comp_str/benches/: compar.rs
comp_str/src/: core_sol.rs  main.rs
crc32/: Cargo.toml
crc32/benches/: example.rs  quick.rs
crc32/src/: lib.rs  main.rs
crypto/: Cargo.toml
crypto/src/: main.rs
experimental/: Cargo.toml
experimental/src/: main.rs
fact/: Cargo.toml
fact/src/: main.rs
format_time/: Cargo.toml
format_time/src/: main.rs
gpu_info/: Cargo.toml
gpu_info/src/: main.rs
hello/src/: main.rs
iterative_rotation_cipher/: Cargo.toml
iterative_rotation_cipher/src/: main.rs
last_digits_of_huge_numbers/: Cargo.toml
last_digits_of_huge_numbers/src/: main.rs
lcs/: test.js
lcs/src/: main.rs
linked_list/: Cargo.toml
linked_list/src/: main.rs
mycmdapp/: Cargo.toml
node_addon/: Cargo.toml  bench.js  build.rs  fromWasm.js  index.d.ts  index.node  jest.config.js  jsVers.js  package.json  pnpm-lock.yaml  rustfmt.toml  timer.js
node_addon/src/: lib.rs  main.rs
node_addon/test/: addon.test.js
node_addon/wasi_func/: Cargo.toml
node_addon/wasi_func/src/: lib.rs
optimize/: Cargo.toml
optimize/src/: main.rs
primal/: Cargo.toml
primal/src/: main.rs
prime_sieve/: Cargo.toml
prime_sieve/src/: main.rs
printer_err/: Cargo.toml
printer_err/src/: main.rs
rail_fence_cipher/: Cargo.toml
rail_fence_cipher/src/: main.rs
run_on_gpu/: Cargo.toml
run_on_gpu/src/: main.rs
rust-arduino/: Cargo.toml  Nano_flash.sh
rust-arduino/.cargo/: config.toml
rust-arduino/src/: main.rs
rust_addon/: Cargo.toml  index.js  package.json  pnpm-lock.yaml  rust_addon.win32-x64-msvc.node
rust_addon/.github/workflows/: CI.yml
rust_addon/npm/darwin-x64/: README.md  package.json
rust_addon/npm/linux-x64-gnu/: README.md  package.json
rust_addon/npm/win32-x64-msvc/: README.md  package.json
rust_addon/src/: lib.rs
src/: main.rs
string_mix/: Cargo.toml  stringmix.js
string_mix/src/: main.rs
sum_of_itervals/: Cargo.toml  james.cpp
sum_of_itervals/src/: main.rs
sum_of_squares/: Cargo.toml
sum_of_squares/src/: main.rs
task/: Cargo.toml  test.txt
task/src/: main.rs
try_wasm-time/: Cargo.toml
vigenere/: Cargo.toml
vigenere/src/: main.rs
wasm-rust-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-rust-game-of-life/src/: lib.rs
wasm-rust-game-of-life/tests/: web.rs
