[package]
name = "blue"
version = "0.1.0"
authors = ["=Spencer Najib <=spencernajib2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
btleplug = "0.9.0"
pretty_env_logger = "0.4.0"
