[package]
name = "task"
version = "0.1.0"
authors = ["=Spencer Najib <=spencernajib2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
num = "0.4.0"
regex = "1.4.5"
rand = "0.8.0"
rayon = "^1.5.0"
#rayon="1.5.0"
num-bigint = { version = "0.4", features = ["rand"] }
