[package]
name = "wasi_func"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
[dependencies]
wasm-bindgen ="0.2.80"
js-sys = "0.3.57"
rayon = "1.5.2"
wasm-bindgen-rayon = {version ="1.0.3",features =["no-bundler"]}
num = "0.4.0"
[dev-dependencies]
wasm-bindgen-test = "0.3.30"